Fixes overlay z-index

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,7 +20,7 @@
 }
 
 .overlay:target {
-    z-index: 2;
+    z-index: 4;
     display: block;
     background-color: rgba(0, 0, 0, 0.5) ;
     position: fixed;
